Update Correlates of War__Milestone Report.ipynb

--- a/Correlates of War__Milestone Report.ipynb
+++ b/Correlates of War__Milestone Report.ipynb
@@ -7,7 +7,7 @@
     "\n",
     "# Predicting major shifts in international relations\n",
     "\n",
-    "Given data from an academically curated [The Correlates of War](http://www.correlatesofwar.org/data-sets) project that provides data on international relations from about 1820 to about 2007, <br>\n",
+    "Given data from an academically curated [The Correlates of War](http://www.correlatesofwar.org/data-sets) project that provides information on international relations from about 1820 to about 2007, <br>\n",
     "\n",
     "<b>Can we predict major shifts in international relations, such as wars?</b>\n",
     "> <b>More specifically, can we predict if a devastating war is highly likely to occur within the next five years?</b>\n",
